--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,18 @@ h1{
   height: 100vh;
   /* background-color: grey; */
 }
+.color-button {
+  height: 30px;
+  width: 30px;
+  margin: 5px;
+  border: none;
+}
+
+.color-button.active {
+  opacity: 1;
+}
+
+.color-button.active:focus {
+  outline: none;
+  box-shadow: none;
+}
