--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -4,9 +4,12 @@ body{
 .choose_color{
   width: fit-content;
   height: fit-content;
-  position : absolute;
-  left: 1140px;
+  display: flex;
+  margin-right: 10px;
 }
 .my-button{
   display: none;
+}
+.nav-shadow{
+  box-shadow: 0px 2px grey
 }
